# electric-vehicle-charging-infrastructure-location

./: .gitignore  README.md  parse_adapted_solomon_instances.py  requirements.txt  run_case_study.py  run_local_repair_heuristic.py  run_solomon.py
Instances/: EVRPTWFR_Distance_details.txt  EVRPTWPR_Distance_details.txt
Instances/bad_staffelstein_instances/: bad_staffelstein_noDeviations.json  bad_staffelstein_noDeviationsOLD.json
Instances/cr_instances/hof_scenario_0_base_2.0_5.04_4.11_0.19_True/hof_scenario_0/15.0_2.0_29.7_29.7_3.3_0.4_1/: energy_prices.json
Instances/cr_instances/hof_scenario_0_full_1.5_5.04_4.11_0.19_True/hof_scenario_0/15.0_1.5_29.7_29.7_3.3_0.4_1/: energy_prices.json
Instances/evrptw_instance_solutions/: C101.json  C102.json  C103.json  C104.json  C105.json  C106.json  C107.json  C108.json  C109.json  C201.json  C202.json  C203.json  C204.json  C205.json  C206.json  C207.json  C208.json  R101.json  R102.json  R103.json  R104.json  R105.json  R106.json  R107.json  R108.json  R109.json  R110.json  R111.json  R112.json  R201.json  R202.json  R203.json  R204.json  R205.json  R206.json  R207.json  R208.json  R209.json  R210.json  R211.json  (+16 more)
Instances/evrptw_instances/: C101_AddInfraStruct.txt  C101_AddLoc.txt  C102_AddInfraStruct.txt  C102_AddLoc.txt  C103_AddInfraStruct.txt  C103_AddLoc.txt  C104_AddInfraStruct.txt  C104_AddLoc.txt  C105_AddInfraStruct.txt  C105_AddLoc.txt  C106_AddInfraStruct.txt  C106_AddLoc.txt  C107_AddInfraStruct.txt  C107_AddLoc.txt  C108_AddInfraStruct.txt  C108_AddLoc.txt  C109_AddInfraStruct.txt  C109_AddLoc.txt  C201_AddInfraStruct.txt  C201_AddLoc.txt  C202_AddInfraStruct.txt  C202_AddLoc.txt  C203_AddInfraStruct.txt  C203_AddLoc.txt  C204_AddInfraStruct.txt  C204_AddLoc.txt  C205_AddInfraStruct.txt  C205_AddLoc.txt  C206_AddInfraStruct.txt  C206_AddLoc.txt  C207_AddInfraStruct.txt  C207_AddLoc.txt  C208_AddInfraStruct.txt  C208_AddLoc.txt  R101_AddInfraStruct.txt  R101_AddLoc.txt  R102_AddInfraStruct.txt  R102_AddLoc.txt  R103_AddInfraStruct.txt  R103_AddLoc.txt  (+72 more)
Instances/hof_instances/: hof_scenario_0_noDeviations.json  hof_scenario_1_noDeviations.json  hof_scenario_2_noDeviations.json  hof_scenario_3_noDeviations.json  hof_scenario_4_noDeviations.json  hof_scenario_5_noDeviations.json  hof_scenario_6_noDeviations.json  hof_scenario_7_noDeviations.json  hof_scenario_8_noDeviations.json  hof_scenario_9_noDeviations.json
framework/: instance_parameter.py  intermediate_representation.py  preprocessing.py  solution_representation.py  solver.py  solver_clock.py  staggered_conflict_resolution.py  utils.py
iterative_local_search/: conflict.py  decision_variables.py  iterative_local_search.py  spprc_network.py  subproblem.py
math_programming_model/: math_programming_solver.py  model.py  network.py  solution.py  solution_analysis.py  solver_parameters.py
network_cpp/: .appveyor.yml  CMakeLists.txt  README.md  cmake_install.cmake  setup.py
network_cpp/catch2_tests/: CMakeLists.txt  catch_main.cpp  cmake_install.cmake  test_instance.cpp  test_parallel_execution.cpp  tests.cpp
network_cpp/catch2_tests/catch2_tests.dir/Debug/: catch2_tests.exe.recipe
network_cpp/catch2_tests/catch2_tests.dir/Debug/catch2_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  catch2_tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
network_cpp/conda.recipe/: meta.yaml
network_cpp/src/: arc.cpp  arc.h  label.cpp  label.h  main.cpp  network.cpp  network.h  route.cpp  route.h  vertex.cpp  vertex.h
tests/: test_a_star.py  test_a_star_cpp.py  test_bounds.py  test_conflict_resolution_debugfile.py  test_conflict_resolution_staggered.py  test_expanded_network.py  test_ils.py  test_integrated_network_creation.py  test_math_program.py  test_osmnx_cleaning.py  test_preprocessing.py  test_utils.py
(+1 files in other folders)
